--- a/Floquet/Makefile
+++ b/Floquet/Makefile
@@ -5,7 +5,7 @@ outputs = output_func.o
 main_objects = main.o $(evolutions) $(results) $(outputs)
 test_objects = test.o $(evolutions) $(results) $(outputs)
 
-CXXFLAGS = -fopenmp
+CXXFLAGS = -O3 -fopenmp
 CXX = g++
 
 all: mbl
