Add update.cpp to makefile

--- a/Floquet/Makefile
+++ b/Floquet/Makefile
@@ -1,9 +1,10 @@
 evolutions = flo_evol_model.o mtrand.o flo_level.o
+functions = generic_func.o update.o
 results = level_stats.o
 outputs = output_func.o
 
-main_objects = main.o $(evolutions) $(results) $(outputs)
-test_objects = test.o $(evolutions) $(results) $(outputs)
+main_objects = main.o $(evolutions) $(functions) $(results) $(outputs)
+test_objects = test.o $(evolutions) $(functions) $(results) $(outputs)
 
 CXXFLAGS = -O3 -fopenmp
 CXX = g++
