--- a/Floquet/Makefile
+++ b/Floquet/Makefile
@@ -1,4 +1,4 @@
-models = flo_evol_random.o flo_evol_random_rotation.o flo_evol_xxz.o
+models = flo_evol_random.o flo_evol_random_rotation.o flo_evol_xxz.o flo_evol.o
 evolutions = mtrand.o flo_level.o flo_rightmost_sigma_z.o
 functions = generic_func.o update.o tasks_models.o model_func.o sort.o
 transitions = transition.o basic_full.o basic_parity.o parity_full.o
