Add null INC in Makefile

--- a/Floquet/Makefile
+++ b/Floquet/Makefile
@@ -1,3 +1,5 @@
+//INC = ~/
+
 models = flo_evol_random.o flo_evol_random_rotation.o flo_evol_xxz.o flo_evol.o
 evolutions = mtrand.o flo_level.o flo_rightmost_sigma_z.o evol_data.o entropy_per_model.o flo_evolution.o
 functions = generic_func.o update.o tasks_models.o model_func.o sort.o reduced_density_left_2.o
@@ -9,7 +11,7 @@ initials = initial_obj.o random_product.o product_random.o random_pure_amplitude
 main_objects = main.o $(models) $(evolutions) $(functions) $(results) $(outputs) $(transitions) $(initials)
 test_objects = test.o $(models) $(evolutions) $(functions) $(results) $(outputs) $(transitions) $(initials)
 
-CXXFLAGS = -O3 -fopenmp 
+CXXFLAGS = -O3 -fopenmp $(INC)
 CXX = g++
 
 all: mbl
