--- a/Floquet/Makefile
+++ b/Floquet/Makefile
@@ -2,7 +2,7 @@
 
 models = flo_evol_random.o flo_evol_random_rotation.o flo_evol_xxz.o flo_evol.o flo_evol_inter_random.o flo_evol_markov_inter_random.o flo_evol_markov_inter_random_both.o
 
-evolutions = mersenne.o flo_level.o flo_rightmost_sigma_z.o evol_data.o entropy_per_model.o flo_evolution.o flo_evolution_simple_markov.o largest_leftmost_spin_z_per_model.o
+evolutions = mersenne.o flo_level.o flo_rightmost_sigma_z.o evol_data.o entropy_per_model.o flo_evolution.o flo_evolution_simple_markov.o leftmost_spin_z_per_model.o leftmost_spin_z_one_run.o
 
 functions = generic_func.o update.o tasks_models.o model_func.o sort.o reduced_density_left_2.o
 
@@ -12,7 +12,7 @@ results = level_stats.o
 
 outputs = output_func.o eigen_output.o
 
-initials = initial_obj.o random_product.o product_random.o random_pure_amplitude.o norm_check.o state_to_density.o random_pure.o largest_leftmost_spin_z_complex_eigenstate.o
+initials = initial_obj.o random_product.o product_random.o random_pure_amplitude.o norm_check.o state_to_density.o random_pure.o largest_leftmost_spin_z_eigenstate.o
 
 main_objects = main.o $(models) $(evolutions) $(functions) $(results) $(outputs) $(transitions) $(initials)
 
